Fix: align options to right

--- a/BCI-Studio/src/assets/main.css
+++ b/BCI-Studio/src/assets/main.css
@@ -12,28 +12,38 @@
   url(/fonts/HustleBright.ttf)format("truetype");
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  position: relative;
+  font-weight: normal;
+}
+
 html, body {
   margin: 0 0 0 0;
   width: 100%;
   height: 100%;
   text-align: center;
-  font-family:'Vanitas', 'HustleBright', 'Bodoni+Moda', 'Verdana', sans-serif;
+  font-family:'HustleBright', 'Bodoni+Moda', 'Verdana', sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-
-
-
-
-/* @import "./base.css";
+/* .flex-container{
+  display: flex;
+  flex-direction: row;
+} */
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
+  height: 100%;
+  width: 100%;
   font-weight: normal;
 }
-
+/*
 a,
 .green {
   text-decoration: none;
